--- a/ISST-G10-CHor/WebContent/index.html
+++ b/ISST-G10-CHor/WebContent/index.html
@@ -2,21 +2,45 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<link href="css/estilos.css" rel= "stylesheet" type= "text/css"/>
+
 <title>Bienvenido!</title>
 </head>
 
 <body>
-<h2>Acceder a cuenta existente</h2>
-<form action="FormLoginServlet">
-	<input type="text" name="email" placeholder="Email">
-	<input type="password" name="password" placeholder="Password">
-	<button type="submit">Login</button>
-</form>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-<h2>Crear cuenta</h2>
-<form action="FormLoginServlet">
-	<button type="submit">Registrarse</button>
-</form>
+
+
+<div class="container">
+	<h2>Acceder a cuenta existente</h2>
+	<form action="LoginServlet">
+		<div class="form-group">
+		<label>Email</label>
+		<input type="text" name="email" placeholder="Email">
+		</div>
+		<div class="form-group">
+		<label>Contraseña</label>
+		<input type="password" name="password" placeholder="Password">
+		</div>	
+		<div class="form-group">
+		<button type="submit" class="btn btn-primary mb-2">Login</button>
+
+		
+		</div>
+		
+	</form>
+			<form action="RegistroServlet">
+			<button type="submit" class="btn btn-primary mb-2">Registrarse</button>
+		</form>
+</div>
+
+
+
+
 
 </body>
 </html>
