--- a/ISST-G10-CHor/WebContent/index.html
+++ b/ISST-G10-CHor/WebContent/index.html
@@ -16,7 +16,9 @@
 
 
 <div class="container">
-	<h2>Acceder a cuenta existente</h2>
+<h2>ConsultHour</h2>
+
+	<h3>Acceder a cuenta existente</h3>
 	<form action="LoginServlet">
 		<div class="form-group">
 		<label>Email</label>
