--- a/ISST-G10-CHor/WebContent/index.html
+++ b/ISST-G10-CHor/WebContent/index.html
@@ -25,7 +25,7 @@
 		<input type="text" name="email" placeholder="Email">
 		</div>
 		<div class="form-group">
-		<label>Contraseña</label>
+		<label>ContraseÃ±a</label>
 		<input type="password" name="password" placeholder="Password">
 		</div>	
 		<div class="form-group">
@@ -35,6 +35,9 @@
 	<form action="RegistroServlet">
 		<button type="submit" class="btn btn-primary mb-2">Registrarse</button>
 	</form>
+	<c:if test="${flag}">
+		<p>Se han registrado sus usuario correctamente. Inicie session.</p>
+	</c:if>
 </div>
 
 
